[Driver] Accept `-serialize-diagnostics-path` for the interpret mode. (#22113)

This patch allows `-serialize-diagnostics-path` for the interpret mode.
There is one file compiled in such mode, so it makes sense to support
this flag to specify an explicit output path for diagnostics emission.

Resolves: SR-9670